python/test-data/testIterable7.err
Traceback (most recent call last):
  File "test-data/testIterable7.py", line 10, in <module>
    print(list(i))
WyppTypeError: generator is not an Iterable[str]
given:    <generator object foo at 0x00>
expected: value of type Iterable[str]

context: foo(i: int) -> Iterable[str]
                        ^^^^^^^^^^^^^
declared at: test-data/testIterable7.py:4
caused by: test-data/testIterable7.py:4
  | def foo(i: int) -> Iterable[str]:
